tests/compile_fail/unhandled_internal.out
In file included from tests/compile_fail/unhandled_internal.cpp:13:
src/secureenumconverter.inc: In static member function ‘static std::optional<_Up> SecureEnumConverter<InternalType, ExternalType>::toExternalOpt(SecureEnumConverter<InternalType, ExternalType>::Internal) [with InternalType = A; ExternalType = B; SecureEnumConverter<InternalType, ExternalType>::Internal = A]’:
src/secureenumconverter.inc:45:12: error: enumeration value ‘A3’ not handled in switch [-Werror=switch]
     switch (internal) {
            ^
compilation terminated due to -Wfatal-errors.
cc1plus: some warnings being treated as errors
